# notes-cli

./: CMakeLists.txt  README.md  main.cpp
Commands/: CMakeLists.txt  CommandManager.cpp  CommandManager.h
Database/: CMakeLists.txt  Database.cpp  Database.h
